# asistente-ia-local

./: .gitignore  DNKLabs.jks  GITHUB_GUIDE.txt  build.gradle.kts  contraseñas.txt  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp  jni-stub.cpp
app/src/main/java/com/dnklabs/asistenteialocal/: AsistenteIAApplication.kt  MainActivity.kt
app/src/main/java/com/dnklabs/asistenteialocal/data/local/: AppDatabase.kt  AppLogger.kt  ConversationDao.kt  ConversationEntity.kt  LicenseManager.kt  ModelPersistenceManager.kt  ModelSettingsManager.kt  SecurityManager.kt  SettingsDao.kt  SettingsEntity.kt  TokenWarningManager.kt
app/src/main/java/com/dnklabs/asistenteialocal/data/ocr/: OCRService.kt
app/src/main/java/com/dnklabs/asistenteialocal/data/repository/: LlamaCppRepository.kt  UpdateRepository.kt
app/src/main/java/com/dnklabs/asistenteialocal/ui/components/: PermissionRequestDialog.kt
app/src/main/java/com/dnklabs/asistenteialocal/ui/navigation/: AppNavigation.kt
app/src/main/java/com/dnklabs/asistenteialocal/ui/screens/chat/: AudioRecorder.kt  ChatScreen.kt  ChatViewModel.kt  TextToSpeechManager.kt
app/src/main/java/com/dnklabs/asistenteialocal/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
(+14 files in other folders)
